--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: build images
         run: |
-             docker build -t myapp:1.0.0
+             docker build -t myapp:1.0.0 .
 
       - name: check container is runner
         run: |
