--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: check container is runner
         run: |
           if [ ! -z "$(docker ps |grep myapp)" ];then
-              docker stop myapp2
+              docker stop myapp
               docker rm myapp
               docker run -d --name myapp -p 8080:80 myapp:1.0.0
 
